--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.2.0",
+    "ngx-easy-table": "^7.2.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
