--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng-drag-drop": "^5.0.0",
     "ngx-easy-table": "^7.2.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
