--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
     "@angular/common": "^7.0.3",
@@ -23,24 +22,10 @@
     "@angular/platform-browser": "^7.0.3",
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
-=======
-    "@angular-devkit/schematics": "^7.1.0",
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
->>>>>>> master
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-<<<<<<< HEAD
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -49,35 +34,27 @@
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "^7.0.3",
-=======
-    "hammerjs": "^2.0.8",
-    "ng-drag-drop": "^5.0.0",
-    "ngx-easy-table": "^7.2.0",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "zone.js": "~0.8.26"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
     "@types/hammerjs": "^2.0.36",
->>>>>>> master
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~1.1.2",
+    "karma": "~3.0.0",
+    "ng-drag-drop": "^5.0.0",
+    "ngx-easy-table": "^7.2.0",
     "protractor": "~5.4.0",
+    "rxjs-compat": "^6.3.3",
+    "rxjs": "^6.3.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "zone.js": "~0.8.26"
   }
 }
