--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,23 +35,23 @@
     "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "^7.0.3",
     "@types/hammerjs": "^2.0.36",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "hammerjs": "^2.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jasmine": "~1.1.2",
-    "karma": "~3.0.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "ng-drag-drop": "^5.0.0",
     "ngx-easy-table": "^7.2.0",
     "protractor": "~5.4.0",
-    "rxjs-compat": "^6.3.3",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6",
