Added debugging configurations for vs code

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,6 +28,35 @@
                 "NG Serve Frontend"
             ],
             "problemMatcher": []
-        }
+        },
+        {
+            "label": "ng serve",
+            "type": "npm",
+            "script": "start",
+            "group": {
+              "kind": "build",
+              "isDefault": true
+            },
+            "problemMatcher": {
+              "owner": "typescript",
+              "source": "ts",
+              "applyTo": "closedDocuments",
+              "fileLocation": [
+                "relative",
+                "${cwd}"
+              ],
+              "pattern": "$tsc",
+              "background": {
+                "activeOnStart": true,
+                "beginsPattern": {
+                  "regexp": "Compiling...|TS\\d+:"
+                },
+                "endsPattern": {
+                  "regexp": "Compiled |Failed to compile."
+                }
+              }
+            }
+          }
+        
     ]
 }
