--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ng-drag-drop/style.css",
               "src/styles.scss"
             ],
             "scripts": []
