--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.5",
+    "@angular/cli": "^7.1.1",
     "@angular/compiler-cli": "^7.0.3",
     "@angular/language-service": "^7.0.3",
     "@types/hammerjs": "^2.0.36",
