Added a build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,7 @@
         },
         {
             "label": "Serve backend and frontend",
+            "group": "build",
             "dependsOn": [
                 "Nodemon Backend",
                 "NG Serve Frontend"
